# cpp-api-consumer

./: .dockerignore  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  app.js  build_and_run.bat  build_and_run.sh  package-lock.json  package.json  run_docker.sh  watch_cpp.js
docker/: Dockerfile  docker-compose.yml
docs/: getting_started.md
include/api_consumer/: api.hpp  utils.hpp
src/: main.cpp
src/api_consumer/: api.cpp  api.hpp  api_response.hpp  utils.cpp
tests/: teste_api_consumer.cpp
